Thu Jan 13 16:06:19 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_compile: 
	* bin/run_all.pl:
	* bin/run_all_list.pm: Added an AMI test case for testing in the
	  nightly builds. 

Wed Jan 12 23:46:36 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Service_Config.h: Updated the
	  ACE_Service_Config::close_singletons() method documentation to
 	  reflect the fact that it no longer deletes the Allocator, which
 	  is deleted by the ACE_Object_Manager now.  Thanks to Craig
 	  Perras <cperras@watchguard.com> for reporting this.

Wed Jan 12 09:49:57 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/make_release: don't create diffs if not installing
          the kit.

Wed Jan 12 07:22:42 2000  David L. Levine  <levine@cs.wustl.edu>

        * Makefile (CONTROLLED_FILES): removed
          man/man3/Makefile.am and man/html/Makefile.am.  There
          addition in
          Tue Jan  4 12:58:54 2000  Ossama Othman  <othman@cs.wustl.edu>
          caused creation of .zip files to break.  zip doesn't like
          multiple occurrences of a file, apparently. [Bug 408]

Tue Jan 11 21:59:34 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/make_release (create_kit): disable creation of
          md5 files, because it didn't work:  just empty files
          were created.  I think that it was looking in the wrong
          directory.

Tue Jan 11 21:26:14 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/make_release (check_workspace): removed the bootstrap
          invocation.  That is done in create_kit (), and should only
          be done once.  (create_kit): set umask to 2, so that the
          kits will have group write permission.

Tue Jan 11 17:39:10 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/Service_Config.h: Updated the ACE_Service_Config::close()
          method documentation to reflect the fact that it no longer
          closes the singletons (these are closed by the